--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h1>Eduardo Arnold</h1>
+                    <div class="card mb-3">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
             </div>
         </div>
         <div class="row">
