--- a/index.html
+++ b/index.html
@@ -11,21 +11,13 @@
 <body class="background-dark">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-4 text-center">
                     <div class="card mb-3">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <img class="card-img-top" src="./boilerplate.svg" alt="Card image cap" style="width: 350px; height: 350px;">
                         <div class="card-block">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h4 class="card-title">Eduardo Arnold</h4>
+                        <a href="./resume/public/index.html" class="list-group-item list-group-item-action">Resume</a>
                       </div>
-                    </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-3">
-                    <div class="list-group">
-                        <a href="#" class="list-group-item list-group-item-action">Resume</a>
                     </div>
             </div>
         </div>
