--- a/index.html
+++ b/index.html
@@ -6,14 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Nyraxle</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
   <link rel="stylesheet" href="assets/main.css">
 </head>
+
 <body>
-  <header class="header">
-    <a href="/" class="page-title">
-      Nyraxle
-    </a>
-  </header>
+  <div class="header">
+    <a href="/" class="page-title">Nyraxle</a>
+    <div class="navbar">
+      <a href="/">Projects</a>
+      <a href="/">Me</a>
+    </div>
+  </div>
+  <div class="content"></div>
+  <div class="footer">
+    <div class="contacts">
+      <p>
+        <a href="https://github.com/nyraxle/" class="icon icon-github"></a>
+        <a href="https://www.npmjs.com/~kalvasflam" class="icon icon-npmjs"></a>
+        <a href="mailto:eduardo@nyraxle.me" class="icon icon-mail"></a>
+        <a href="resume/public" target="_blank" class="icon icon-vitae"></a>
+      </p>
+    </div>
+  </div>
 </body>
+
 </html>
