:sparkles: atualiza o pdf e o site

--- a/resume/public/index.html
+++ b/resume/public/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, minimal-ui">
 <title>Eduardo Arnold</title>
-<style>
+<script src="/cdn-cgi/apps/head/QEWNwoPSl2O5LqMXvi595gsiMPg.js"></script><style>
 	body {
 	background: #fff;
 	font: 16px 'Open Sans', Helvetica, Arial, sans-serif;
@@ -154,7 +154,7 @@ section h2 {
 <style media="print">
 		body { font-size: 12px; }
 	</style>
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300" rel="stylesheet" type="text/css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div id="resume">
@@ -163,10 +163,10 @@ section h2 {
 <h1>Eduardo Arnold</h1>
 <div class="contact">
 <span class="detail">
-<a href="/cdn-cgi/l/email-protection#e48180918596808bca85968a8b8880a48b9190888b8b8fca878b89"><span class="__cf_email__" data-cfemail="f49190819586909bda95869a9b9890b49b8180989b9b9fda979b99">[email&#160;protected]</span></a>
+<a href="/cdn-cgi/l/email-protection#046160716576606b2a65766a6b6860446b7170686b6b6f2a676b69"><span class="__cf_email__" data-cfemail="244140514556404b0a45564a4b4840644b5150484b4b4f0a474b49">[email&#160;protected]</span></a>
 </span>
 <span class="detail">
-(051) 98099-5374
+(051) 98039-5374
 </span>
 </div>
 </header>
@@ -186,6 +186,11 @@ npm
 <a href="https://npmjs.org/~kalvasflam">kalvasflam</a>
 </span>
 </div>
+<div class="profile">
+<strong class="network">
+PDF
+</strong>
+</div>
 </section>
 <section id="skills">
 <h2>Skills</h2>
@@ -198,11 +203,10 @@ Javascript,
 Typescript,
 ES6,
 NodeJS,
+Angular,
 AngularJS,
 Webpack,
 Gulp,
-Angular 2,
-Angular 4,
 Bower,
 Grunt,
 HTML5,
@@ -241,13 +245,13 @@ Nov 2014
 - Present
 </span>
 <ul class="highlights">
-<li>Atualmente: Desenvolvedor front-end em uma aplicaçao voltada para a gestao condominial. Tecnologias: Angular 4, Typescript, Webpack, docker, dotnet core</li>
+<li>Atualmente: Auxiliadora Predial: Desenvolvimento de uma aplicação voltada para a gestão condominial utilizando conceitos de microserviços. Tecnologias: Angular, Typescript, dotnet core</li>
 <li>Niely - eCoop: Sistema de gestão de ações de marketing e cooperações comerciais da L’Óreal – Niely Brasil. Atuei como desenvolvedor full stack. Tecnologias: AngularJS, ASP.NET Web API, Entity Framework, Git, Grunt, SQL Server, TeamCity (CI), Specflow</li>
-<li>Fleury - CR: Reescrita de um projeto legado em VB para Web. Montei a arquitetura de front-end e atuei no desenvolvimento do front e back-end da aplicação. Tecnologias: Angular, Webpack, Dapper .NET, WCF, ASP.NET Web API.</li>
+<li>Fleury - CR: Reescrita de um projeto legado em VB para Web. Montei a arquitetura de front-end e atuei no desenvolvimento do front e back-end da aplicação. Tecnologias: AngularJS, Webpack, Dapper .NET, WCF, ASP.NET Web API.</li>
 <li>Credz - Portal Pessoa Juridica: Portal pessoa jurídica e sistema de gestão de crédito de pessoas jurídicas para a bandeira Credz. Desenvolvi a arquitetura front-end da aplicação Single-page e atuei em diversas funcionalidades no back-end. Tecnologias: AngularJS, ASP.NET Web API, Entity Framework, Gulp, SQL Server</li>
 <li>Elefante Letrado: Sistema de ebooks para o publico infanto-juvenil. Participei do desenvolvimento do front e back-end do painel estatistico. Tecnologias: AngularJS, .NET, Entity Framework</li>
 <li>Finaud - RiskDriver: Sistema de gestão de risco financeiro. Atuei na segunda fase no desenvolvimento de funcionalidades como a importação de dados do Banco Central e a geração de formulários dinâmicos em Web. Tecnologias: AngularJS, ASP.NET MVC, Entity Framework, SQL Server.</li>
-<li>Credz - Fabrica: Sistemas de gerenciamento de crédito para pessoa física, SGC, Portal. Atuei em front e back - end na manutenção dos sistemas legados existentes. Tecnologias: ASP.NET MVC, Entity Framework, SQL Server, WCF, ASP.NET Web API.</li>
+<li>Credz - Fabrica: Sistemas de gerenciamento de crédito para pessoa física, SGC, Portal. Atuei em front e back-end na manutenção dos sistemas legados existentes. Tecnologias: ASP.NET MVC, Entity Framework, SQL Server, WCF, ASP.NET Web API.</li>
 </ul>
 </section>
 <section class="item">
@@ -255,7 +259,7 @@ Nov 2014
 <h3 class="name">Datum T.I</h3>
 </header>
 <span class="position">
-Estagio
+Estagiário
 </span>
 <span class="startDate">
 Nov 2011
@@ -273,10 +277,10 @@ Nov 2011
 </header>
 <div class="dates">
 <span class="startDate">
-Jan 2011
+Mar 2011
 </span>
 <span class="endDate">
-- Dec 2015
+- Jan 2016
 </span>
 </div>
 <div class="qualification">
@@ -316,7 +320,7 @@ Conferencia Internacional de Informatica Educativa 2015 - TISE 2015, 2015. v. 1.
 Ingles
 </div>
 <div class="fluency">
-<em>le bem, compreende bem, fala razoavelmente, escreve razoavelmente</em>
+<em>lê bem, compreende bem, fala razoavelmente, escreve razoavelmente</em>
 </div>
 </div>
 </section>
@@ -342,16 +346,7 @@ Game Development
 <li>Construct</li>
 </ul>
 </div>
-<div class="item">
-<div class="name">
-Cycling
-</div>
-<ul class="keywords">
-<li>Fixed gear</li>
-<li>Bikepacking</li>
-</ul>
-</div>
 </section>
 </div>
-<script>!function(e,t,r,a,n,c,l,o){function h(e,t,r,a){for(r='',a='0x'+e.substr(t,2)|0,t+=2;t<e.length;t+=2)r+=String.fromCharCode('0x'+e.substr(t,2)^a); return r}try{for(n=e.getElementsByTagName('a'),l='/cdn-cgi/l/email-protection#',o=l.length,a=0;a<n.length;a++)try{c=n[a],t=c.href.indexOf(l),t>-1&&(c.href='mailto:'+h(c.href,t+o))}catch(f){}for(n=Array.prototype.slice.apply(e.getElementsByClassName('__cf_email__')),a=0;a<n.length;a++)try{c=n[a],c.parentNode.replaceChild(e.createTextNode(h(c.getAttribute('data-cfemail'),0)),c)}catch(f){}}catch(f){}}(document)</script></body>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
 </html>
