:sparkles: ajusta o link de download do pdf

--- a/resume/public/index.html
+++ b/resume/public/index.html
@@ -163,7 +163,7 @@ section h2 {
 <h1>Eduardo Arnold</h1>
 <div class="contact">
 <span class="detail">
-<a href="/cdn-cgi/l/email-protection#046160716576606b2a65766a6b6860446b7170686b6b6f2a676b69"><span class="__cf_email__" data-cfemail="244140514556404b0a45564a4b4840644b5150484b4b4f0a474b49">[email&#160;protected]</span></a>
+<a href="/cdn-cgi/l/email-protection#3b5e5f4e5a495f54155a495554575f7b544e4f5754545015585456"><span class="__cf_email__" data-cfemail="b3d6d7c6d2c1d7dc9dd2c1dddcdfd7f3dcc6c7dfdcdcd89dd0dcde">[email&#160;protected]</span></a>
 </span>
 <span class="detail">
 (051) 98039-5374
@@ -190,6 +190,9 @@ npm
 <strong class="network">
 PDF
 </strong>
+<span class="username">
+<a href="https://github.com/nyraxle/nyraxle/raw/master/resume/resume.pdf">download</a>
+</span>
 </div>
 </section>
 <section id="skills">
