:sparkles: corrige o link do email

--- a/resume/public/index.html
+++ b/resume/public/index.html
@@ -163,7 +163,7 @@ section h2 {
 <h1>Eduardo Arnold</h1>
 <div class="contact">
 <span class="detail">
-<a href="/cdn-cgi/l/email-protection#3b5e5f4e5a495f54155a495554575f7b544e4f5754545015585456"><span class="__cf_email__" data-cfemail="b3d6d7c6d2c1d7dc9dd2c1dddcdfd7f3dcc6c7dfdcdcd89dd0dcde">[email&#160;protected]</span></a>
+<a href="eduardo.arnold@outlook.com"><span class="__cf_email__">eduardo.arnold@outlook.com</span></a>
 </span>
 <span class="detail">
 (051) 98039-5374
