--- a/resume/public/index.html
+++ b/resume/public/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, user-scalable=no, minimal-ui">
-<title>Eduardo Arnold</title>
-<script src="/cdn-cgi/apps/head/QEWNwoPSl2O5LqMXvi595gsiMPg.js"></script><style>
+	<head>
+	
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimal-ui">
+	
+	<title>Eduardo Arnold</title>
+
+	<style>
 	body {
 	background: #fff;
 	font: 16px 'Open Sans', Helvetica, Arial, sans-serif;
@@ -151,205 +154,234 @@ section h2 {
 
 
 	</style>
-<style media="print">
+	<style media="print">
 		body { font-size: 12px; }
 	</style>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
-</head>
-<body>
-<div id="resume">
-<section class="heading">
-<header>
-<h1>Eduardo Arnold</h1>
-<div class="contact">
-<span class="detail">
-<a href="eduardo.arnold@outlook.com"><span class="__cf_email__">eduardo.arnold@outlook.com</span></a>
-</span>
-<span class="detail">
-(051) 98039-5374
-</span>
-</div>
-</header>
-<div class="profile">
-<strong class="network">
-github
-</strong>
-<span class="username">
-<a href="http://github.com/nyraxle/">nyraxle</a>
-</span>
-</div>
-<div class="profile">
-<strong class="network">
-npm
-</strong>
-<span class="username">
-<a href="https://npmjs.org/~kalvasflam">kalvasflam</a>
-</span>
-</div>
-<div class="profile">
-<strong class="network">
-PDF
-</strong>
-<span class="username">
-<a href="https://github.com/nyraxle/nyraxle/raw/master/resume/resume.pdf">download</a>
-</span>
-</div>
-</section>
-<section id="skills">
-<h2>Skills</h2>
-<div class="item">
-<div class="name">
-Tecnologias
-</div>
-<div class="keywords">
-Javascript,
-Typescript,
-ES6,
-NodeJS,
-Angular,
-AngularJS,
-Webpack,
-Gulp,
-Bower,
-Grunt,
-HTML5,
-CSS3,
-ASP.NET WebAPI,
-.NET,
-dotnet core,
-Dapper.NET,
-Cucumber,
-Specflow,
-BDD,
-MochaJS,
-Jasmine,
-MongoDB,
-SQL,
-Travis-CI,
-TeamCity,
-Heroku,
-Git
-</div>
-</div>
-</section>
-<section class="experience">
-<h2>Experience</h2>
-<section class="item">
-<header>
-<h3 class="name">CWI</h3>
-</header>
-<span class="position">
-Desenvolvedor
-</span>
-<span class="startDate">
-Nov 2014
-</span>
-<span class="endDate">
-- Present
-</span>
-<ul class="highlights">
-<li>Atualmente: Auxiliadora Predial: Desenvolvimento de uma aplicação voltada para a gestão condominial utilizando conceitos de microserviços. Tecnologias: Angular, Typescript, dotnet core</li>
-<li>Niely - eCoop: Sistema de gestão de ações de marketing e cooperações comerciais da L’Óreal – Niely Brasil. Atuei como desenvolvedor full stack. Tecnologias: AngularJS, ASP.NET Web API, Entity Framework, Git, Grunt, SQL Server, TeamCity (CI), Specflow</li>
-<li>Fleury - CR: Reescrita de um projeto legado em VB para Web. Montei a arquitetura de front-end e atuei no desenvolvimento do front e back-end da aplicação. Tecnologias: AngularJS, Webpack, Dapper .NET, WCF, ASP.NET Web API.</li>
-<li>Credz - Portal Pessoa Juridica: Portal pessoa jurídica e sistema de gestão de crédito de pessoas jurídicas para a bandeira Credz. Desenvolvi a arquitetura front-end da aplicação Single-page e atuei em diversas funcionalidades no back-end. Tecnologias: AngularJS, ASP.NET Web API, Entity Framework, Gulp, SQL Server</li>
-<li>Elefante Letrado: Sistema de ebooks para o publico infanto-juvenil. Participei do desenvolvimento do front e back-end do painel estatistico. Tecnologias: AngularJS, .NET, Entity Framework</li>
-<li>Finaud - RiskDriver: Sistema de gestão de risco financeiro. Atuei na segunda fase no desenvolvimento de funcionalidades como a importação de dados do Banco Central e a geração de formulários dinâmicos em Web. Tecnologias: AngularJS, ASP.NET MVC, Entity Framework, SQL Server.</li>
-<li>Credz - Fabrica: Sistemas de gerenciamento de crédito para pessoa física, SGC, Portal. Atuei em front e back-end na manutenção dos sistemas legados existentes. Tecnologias: ASP.NET MVC, Entity Framework, SQL Server, WCF, ASP.NET Web API.</li>
-</ul>
-</section>
-<section class="item">
-<header>
-<h3 class="name">Datum T.I</h3>
-</header>
-<span class="position">
-Estagiário
-</span>
-<span class="startDate">
-Nov 2011
-</span>
-<span class="endDate">
-- Jun 2013
-</span>
-</section>
-</section>
-<section id="education">
-<h2>Education</h2>
-<div class="item">
-<header>
-<h3 class="name">PUCRS</h3>
-</header>
-<div class="dates">
-<span class="startDate">
-Mar 2011
-</span>
-<span class="endDate">
-- Jan 2016
-</span>
-</div>
-<div class="qualification">
-<span class="studyType">
-Bacharel
-</span>
-<span class="area">
-- Sistemas de Informaçao
-</span>
-</div>
-</div>
-</section>
-<section id="publications">
-<h2>Publications</h2>
-<div class="item">
-<div class="name">
-OpenPBL: Proposta de Sistema para Auxilio ao Aprendizado Baseado em Problemas
-</div>
-<div class="publisher">
-Conferencia Internacional de Informatica Educativa 2015 - TISE 2015, 2015. v. 1. p. 1-8
-</div>
-<div class="releaseDate">
-2015
-</div>
-<div class="website">
-<a href="https://openpbl-stage.herokuapp.com">Link</a>
-</div>
-<div class="summary">
-<p>Sistema desenvolvido com o objetivo de apoiar professores que desejam fazer uso do Problem-based Learning (PBL) em atividades escolares. Ferramenta desenvolvida aplicando as praticas de IHC, boas praticas de desenvolvimento e qualidade de codigo. Tecnologias: NodeJS, AngularJS, MongoDB, Grunt, Cucumber, PaaS (Heroku e Mongolab).</p>
-</div>
-</div>
-</section>
-<section id="languages">
-<h2>Languages</h2>
-<div class="item">
-<div class="language">
-Ingles
-</div>
-<div class="fluency">
-<em>lê bem, compreende bem, fala razoavelmente, escreve razoavelmente</em>
-</div>
-</div>
-</section>
-<section id="interests">
-<h2>Interests</h2>
-<div class="item">
-<div class="name">
-Development
-</div>
-<ul class="keywords">
-<li>Javascript</li>
-<li>NodeJS</li>
-<li>Artificial Intelligence</li>
-<li>Unix Philosophy</li>
-</ul>
-</div>
-<div class="item">
-<div class="name">
-Game Development
-</div>
-<ul class="keywords">
-<li>Unity</li>
-<li>Construct</li>
-</ul>
-</div>
-</section>
-</div>
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
+
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
+	
+	</head>
+	<body>
+	
+	<div id="resume">
+
+	<section class="heading">
+		<header>
+			<h1>Eduardo Arnold</h1>
+			<div class="contact">
+				<span class="detail">
+					<a href="mailto:eduardo.arnold@outlook.com">eduardo.arnold@outlook.com</a>
+				</span>
+				<span class="detail">
+					(051) 98039-5374
+				</span>
+			</div>
+		</header>
+
+
+
+			<div class="profile">
+				<strong class="network">
+					github
+				</strong>
+				<span class="username">
+					<a href="http://github.com/nyraxle/">nyraxle</a>
+				</span>
+			</div>
+			<div class="profile">
+				<strong class="network">
+					npm
+				</strong>
+				<span class="username">
+					<a href="https://npmjs.org/~kalvasflam">kalvasflam</a>
+				</span>
+			</div>
+			<div class="profile">
+				<strong class="network">
+					PDF
+				</strong>
+				<span class="username">
+					<a href="https://github.com/nyraxle/nyraxle/raw/master/resume/resume.pdf">download</a>
+				</span>
+			</div>
+
+	</section>
+
+	<section id="skills">
+		<h2>Skills</h2>
+		<div class="item">
+			<div class="name">
+				Tecnologias
+			</div>
+			<div class="keywords">
+					Javascript,
+					Typescript,
+					ES6,
+					NodeJS,
+					Angular,
+					AngularJS,
+					React,
+					Webpack,
+					Gulp,
+					Bower,
+					Grunt,
+					HTML5,
+					CSS3,
+					ASP.NET WebAPI,
+					.NET,
+					dotnet core,
+					Dapper.NET,
+					Cucumber,
+					Specflow,
+					BDD,
+					MochaJS,
+					Jasmine,
+					MongoDB,
+					SQL,
+					Travis-CI,
+					TeamCity,
+					Heroku,
+					Git
+			</div>
+		</div>
+	</section>
+
+	<section class="experience">
+		<h2>Experience</h2>
+		<section class="item">
+			<header>
+					<h3 class="name">CWI</h3>
+			</header>
+			<span class="position">
+				Desenvolvedor
+			</span>
+
+			<span class="startDate">
+				Nov 2014
+			</span>
+			<span class="endDate">
+				- Present
+			</span>
+
+			<ul class="highlights">
+				<li>Atualmente: Auxiliadora Predial: Desenvolvimento de uma aplicação voltada para a gestão condominial utilizando conceitos de microserviços. Tecnologias: Angular, Typescript, dotnet core</li>
+				<li>Niely - eCoop: Sistema de gestão de ações de marketing e cooperações comerciais da L’Óreal – Niely Brasil. Atuei como desenvolvedor full stack. Tecnologias: AngularJS, ASP.NET Web API, Entity Framework, Git, Grunt, SQL Server, TeamCity (CI), Specflow</li>
+				<li>Fleury - CR: Reescrita de um projeto legado em VB para Web. Montei a arquitetura de front-end e atuei no desenvolvimento do front e back-end da aplicação. Tecnologias: AngularJS, Webpack, Dapper .NET, WCF, ASP.NET Web API.</li>
+				<li>Credz - Portal Pessoa Juridica: Portal pessoa jurídica e sistema de gestão de crédito de pessoas jurídicas para a  bandeira Credz. Desenvolvi a arquitetura front-end da aplicação Single-page e atuei em diversas funcionalidades no back-end. Tecnologias: AngularJS, ASP.NET Web API, Entity Framework, Gulp, SQL Server</li>
+				<li>Elefante Letrado: Sistema de ebooks para o publico infanto-juvenil. Participei do desenvolvimento do front e back-end do painel estatistico. Tecnologias: AngularJS, .NET, Entity Framework</li>
+				<li>Finaud - RiskDriver: Sistema de gestão de risco financeiro. Atuei na segunda fase no desenvolvimento de funcionalidades como a importação de dados do Banco Central e a geração de formulários dinâmicos em Web. Tecnologias: AngularJS, ASP.NET MVC, Entity Framework, SQL Server.</li>
+				<li>Credz - Fabrica: Sistemas de gerenciamento de crédito para pessoa física, SGC, Portal. Atuei em front e back-end na manutenção dos sistemas legados existentes. Tecnologias: ASP.NET MVC, Entity Framework, SQL Server, WCF, ASP.NET Web API.</li>
+			</ul>
+		</section>
+		<section class="item">
+			<header>
+					<h3 class="name">Datum T.I</h3>
+			</header>
+			<span class="position">
+				Estagiário
+			</span>
+
+			<span class="startDate">
+				Nov 2011
+			</span>
+			<span class="endDate">
+				- Jun 2013
+			</span>
+
+		</section>
+	</section>
+
+	
+	<section id="education">
+		<h2>Education</h2>
+		<div class="item">
+			<header>
+					<h3 class="name">PUCRS</h3>
+			</header>
+
+			<div class="dates">
+				<span class="startDate">
+					Feb 2011
+				</span>
+				<span class="endDate">
+					- Jan 2016
+				</span>
+			</div>
+
+			<div class="qualification">
+				<span class="studyType">
+					Bacharel
+				</span>
+
+				<span class="area">
+					- Sistemas de Informaçao
+				</span>
+
+			</div>
+
+		</div>
+	</section>
+	
+	
+	<section id="publications">
+		<h2>Publications</h2>
+		<div class="item">
+			<div class="name">
+				OpenPBL: Proposta de Sistema para Auxilio ao Aprendizado Baseado em Problemas
+			</div>
+			<div class="publisher">
+				Conferencia Internacional de Informatica Educativa 2015 - TISE 2015, 2015. v. 1. p. 1-8
+			</div>
+			<div class="releaseDate">
+				2015
+			</div>
+			<div class="website">
+				<a href="https://openpbl-stage.herokuapp.com">Link</a>
+			</div>
+			<div class="summary">
+				<p>Sistema desenvolvido com o objetivo de apoiar professores que desejam fazer uso do Problem-based Learning (PBL) em atividades escolares. Ferramenta desenvolvida aplicando as praticas de IHC, boas praticas de desenvolvimento e qualidade de codigo. Tecnologias: NodeJS, AngularJS, MongoDB, Grunt, Cucumber, PaaS (Heroku e Mongolab).</p>
+			</div>
+		</div>
+	</section>
+
+	<section id="languages">
+		<h2>Languages</h2>
+		<div class="item">
+			<div class="language">
+				Ingles
+			</div>
+			<div class="fluency">
+				<em>lê bem, compreende bem, fala razoavelmente, escreve razoavelmente</em>
+			</div>
+		</div>
+	</section>
+
+	<section id="interests">
+		<h2>Interests</h2>
+		<div class="item">
+			<div class="name">
+				Development
+			</div>
+			<ul class="keywords">
+				<li>Javascript</li>
+				<li>NodeJS</li>
+				<li>Artificial Intelligence</li>
+				<li>Unix Philosophy</li>
+			</ul>
+		</div>
+		<div class="item">
+			<div class="name">
+				Game Development
+			</div>
+			<ul class="keywords">
+				<li>Unity</li>
+				<li>Construct</li>
+			</ul>
+		</div>
+	</section>
+	
+	
+	</div>
+	
+	</body>
 </html>
