--- a/resume/public/index.html
+++ b/resume/public/index.html
@@ -264,7 +264,8 @@ section h2 {
 			</span>
 
 			<ul class="highlights">
-				<li>Atualmente: Auxiliadora Predial: Desenvolvimento de uma aplicação voltada para a gestão condominial utilizando conceitos de microserviços. Tecnologias: Angular, Typescript, dotnet core</li>
+				<li>Atualmente: ENEL: Desenvolvimento de uma aplicação de contratos de crédito. Tecnologias: React, dotnet core, mongodb</li>
+				<li>Auxiliadora Predial: Auxiliadora Predial: Desenvolvimento de uma aplicação voltada para a gestão condominial utilizando conceitos de microserviços. Tecnologias: Angular, Typescript, dotnet core</li>
 				<li>Niely - eCoop: Sistema de gestão de ações de marketing e cooperações comerciais da L’Óreal – Niely Brasil. Atuei como desenvolvedor full stack. Tecnologias: AngularJS, ASP.NET Web API, Entity Framework, Git, Grunt, SQL Server, TeamCity (CI), Specflow</li>
 				<li>Fleury - CR: Reescrita de um projeto legado em VB para Web. Montei a arquitetura de front-end e atuei no desenvolvimento do front e back-end da aplicação. Tecnologias: AngularJS, Webpack, Dapper .NET, WCF, ASP.NET Web API.</li>
 				<li>Credz - Portal Pessoa Juridica: Portal pessoa jurídica e sistema de gestão de crédito de pessoas jurídicas para a  bandeira Credz. Desenvolvi a arquitetura front-end da aplicação Single-page e atuei em diversas funcionalidades no back-end. Tecnologias: AngularJS, ASP.NET Web API, Entity Framework, Gulp, SQL Server</li>
