--- a/presentation/angular-for-ninja-babies/index.html
+++ b/presentation/angular-for-ninja-babies/index.html
@@ -47,7 +47,7 @@
         <section>
           <h2>Getting started</h2><br>
           <p class="fragment">Why?</p>
-          <a class="fragment" href="https://angular.io/cli" target="_blank" rel="noopener noreferrer">docs (link)</a>
+          <a class="fragment" href="https://angular.io/cli" target="_blank" rel="noopener noreferrer">docs (link)</a><br>
           <a class="fragment" href="https://angular.io/guide/styleguide" target="_blank" rel="noopener noreferrer">Style
             Guide (link)</a>
           <aside class="notes">
@@ -138,7 +138,7 @@
           </aside>
         </section>
         <section>
-          <h3>...nos detalhes</h3>
+          <h3>...on details</h3>
           <p class="fragment">modules</p>
           <p class="fragment">routes</p>
           <p class="fragment">components</p>
